--- a/public/notes.html
+++ b/public/notes.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" href="/">Note Taker </a>
       <div class="icons">
-        <i class="fas fa-save text-light save-note"></i>
+        <i class="fas fa-save text-light save-note" onClick="window.location.reload()"></i>
         <i class="fas fa-plus text-light new-note"></i>
       </div>
     </nav>
@@ -44,6 +44,6 @@
         </div>
       </div>
     </div>
-    <script src="/public/assets/js/index.js"></script>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
